syntax = "proto2";

option go_package = "github.com/RoboCup-SSL/ssl-game-controller/internal/app/rcon";

import "ssl_gc_common.proto";
import "ssl_gc_rcon.proto";

// a registration that must be send by the remote control to the controller as the very first message
message RemoteControlRegistration {
    // the team to be controlled
    required SSL_Team team = 1;
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 2;
}

// wrapper for all messages from the remote control to the controller
message RemoteControlToController {
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 1;

    oneof msg {
        // send a ping to the GC to test if the connection is still open.
        // the value is ignored and a reply is sent back
        Request request = 2;

        // request a new desired keeper id
        int32 desired_keeper = 3;

        // true: request to substitute a robot at the next possibility
        // false: cancel request
        bool substitute_bot = 4;

        // true: request a timeout with the next stoppage
        // false: cancel the reuqest
        bool timeout = 5;

        // true: initiate an emergency stop
        // false: ignored (emergency_stop can not be canceled)
        bool emergency_stop = 6;
    }

    enum Request {
        UNKNOWN = 0;
        // Ping the GC to test the connection. The GC will respond with OK.
        PING = 1;
        // Request the current team state
        GET_STATE = 2;
        // Raise a challenge flag (this is not revocable)
        CHALLENGE_FLAG = 3;
    }
}

// wrapper for all messages from controller to a team's computer
message ControllerToRemoteControl {
    // a reply from the controller
    optional ControllerReply controller_reply = 1;

    // currently set keeper id
    optional int32 keeper = 2;

    // true, if substitution request pending
    optional bool substitute_bot = 3;

    // true, if emergency stop pending
    optional bool emergency_stop = 4;

    // number of seconds till emergency stop is executed
    optional float emergency_stop_in = 5;

    // true, if timeout request pending
    optional bool timeout = 6;

    // true, if challenge flag pending
    optional bool challenge_flag = 7;
}